Added Weekend 25th, 2021

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My Blog</title>
+    <title>My Hackathon Journey</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
       <img src="images/rss-icon.png" width="50px" />
-      <h1>Your Future Blog</h1>
+      <h1>My Hackathon Journey</h1>
     </header>
     <main>
       <!-- This article block is a single blog post! Copy and paste to add additional posts -->
       <article>
-        <h3>Repl.it Game Jam!</h3>
-        <hr />
-        <p>The game jam on Repl.it began today!  I'm super excited to make my game.  I'm going to use <a href="https://repl.it.languages/pygame">PyGame</a> to create a really awesome platformer.  </p>
-        <p class="date">2018-03-18</p>
+        <h3>PrideHacks | DefHacks | R. U. Hacking | EngHack</h3>
+        <hr/>
+        <p>Isn't the title hectic enough? Yes, I did (or at least tried to do four hackathons on the same weekend), out of which 2 didn't allow cross-submissions. For PetPal, it took me 6 hours after submission to realize that the audio wasn't recorded 🤦‍♂️<br>Conclusion: Don't participate in 4 hackathons at once, unless they're allowing cross submissions.<br><a href="https://devpost.com/software/pridenet">Pride Hacks + DefHacks</a><br><a href = "https://devpost.com/software/petpal-wk2bzg">R. U. Hacking</a> </p>
+        <p class="date">2021, Weekend 25th</p>
       </article>
       
       <article>
