Added Weekend 23rd

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
       </article>
       
       <article>
-        <h3>Lunch today</h3>
+        <h3>Surfs Up Hacks</h3>
         <hr />
-        <p>Today for lunch I had hawaiian pizza, which is the best kind of pizza.  Pineapples are great on anything.  Then I made some sweet games on Repl.it.  What does the future hold for me?  Guess we'll find out!</p>
-        <p class="date">2018-03-15</p>
+        <p>Achieved First Overall at Surfs Up Hacks by Major League Hacking for developing <a href = "https://devpost.com/software/beach-please">Beach, Please</a>.<br>P.S. All my efforts were dedicated towards the project because I wanted them to scream "Beach, Please" on stream.</p>
+        <p class="date">2021, Weekend 23rd</p>
       </article>
+      
     </main>
     <footer>
 
