Added Weekend 20th

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         <p class="date">2021, Weekend 23rd</p>
       </article>
       
+      <article>
+        <h3>Mental Health Hacks</h3>
+        <hr />
+        <p>Won Best Hardware Hack at Mental Health Hacks by Major League Hacking for developing <a href = "https://devpost.com/software/mindrealm">Mind Realm</a></p>
+        <p class="date">2021, Weekend 20th</p>
+      </article>
+
     </main>
     <footer>
 
