Added Weekend 19th

--- a/index.html
+++ b/index.html
@@ -28,11 +28,27 @@
       </article>
       
       <article>
+        <h3>Hack the Earth</h3>
+        <hr />
+        <p>Won Best Hardware Hack at Hack the Earth for developing <a href = "https://devpost.com/software/securest">SecuRest</a>.</p>
+        <p class="date">2021, Weekend 22th</p>
+      </article>
+
+      <article>
         <h3>Mental Health Hacks</h3>
         <hr />
-        <p>Won Best Hardware Hack at Mental Health Hacks by Major League Hacking for developing <a href = "https://devpost.com/software/mindrealm">Mind Realm</a></p>
+        <p>Won Best Hardware Hack at Mental Health Hacks by Major League Hacking for developing <a href = "https://devpost.com/software/mindrealm">Mind Realm</a>.</p>
         <p class="date">2021, Weekend 20th</p>
       </article>
+
+      <article>
+        <h3>Neighborhood Hacks</h3>
+        <hr />
+        <p>Achieved Second Overall at Neighborhood Hacks by Major League Hacking for developing <a href = "https://devpost.com/software/safemail">SafeMail</a>.</p>
+        <p class="date">2021, Weekend 19th</p>
+      </article>
+
+      
 
     </main>
     <footer>
