Added Weekend 17th

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         <p class="date">2021, Weekend 18th</p>
       </article>
 
+      <article>
+        <h3>Hack At Home II</h3>
+        <hr />
+        <p>Achieved First Overall at Hack at Home II by Major League Hacking for developing <a href = "https://devpost.com/software/smartbin-qkcliw">SmartBin</a>.</p>
+        <p class="date">2021, Weekend 17th</p>
+      </article>
+
     </main>
     <footer>
 
