Added Weekend 16th

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         <p class="date">2021, Weekend 17th</p>
       </article>
 
+      <article>
+        <h3>VenusHacks</h3>
+        <hr />
+        <p>Won Best Hardware Hack at VenusHacks by UCI for developing <a href = "https://devpost.com/software/brain-controlled-robotic-joint">Brain Controlled Robotic Joint</a>.</p>
+        <p class="date">2021, Weekend 16th</p>
+      </article>
+
     </main>
     <footer>
 
