Added Weekend 16th

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
         <p>Won Best Hardware Hack at VenusHacks by UCI for developing <a href = "https://devpost.com/software/brain-controlled-robotic-joint">Brain Controlled Robotic Joint</a>.</p>
         <p class="date">2021, Weekend 16th</p>
       </article>
+      <article>
+        <h3>Hack-ccessible</h3>
+        <hr />
+        <p>Won First Overall at Hack-cessible by Major League Hacking for developing <a href = "https://devpost.com/software/brain-controlled-robotic-joint">Brain Controlled Robotic Joint</a>.</p>
+        <p class="date">2021, Weekend 16th</p>
+      </article>
 
     </main>
     <footer>
